fixed an issue where the checkout page overflowed the screen on smaller devices

--- a/src/pages/CheckOut.css
+++ b/src/pages/CheckOut.css
@@ -6,7 +6,7 @@
 }
 
 .page-head {
-  min-width: 500px;
+  min-width: 400px;
   width: 50vw;
   display: flex;
   justify-content: space-between;
@@ -34,7 +34,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  min-width: 500px;
+  min-width: 400px;
   width: 50vw;
   padding: 10px;
   border-bottom: 1px solid rgba(128, 128, 128, 0.451);
@@ -49,6 +49,9 @@
 
 @media (max-width: 500px) {
   .checkout-image {
+    display: none;
+  }
+  .cc-sub-section-two {
     display: none;
   }
 }
